--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,17 @@
 {
-    "presets": ["es2016", "react", "stage-0"],
-    "plugins": [
-      ["transform-decorators-legacy"],
-    ]
+  "presets": ["react", "es2015", "stage-0"],
+  "plugins": [
+    [
+      "transform-decorators-legacy",
+      "react-hot-loader/babel",
+    ],
+  ],
+  "env": {
+    "development": {
+      "plugins": []
+    },
+    "production": {
+      "plugins": []
+    }
   }
+}
