--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.18.0",
     "es6-promise": "^4.2.6",
     "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "npm-check-updates": "^3.1.4",
     "radium": "^0.25.1",
