--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "react": "^16.8.6",
-    "react-hot-loader": "^4.8.2",
+    "react-hot-loader": "^4.9.0",
     "redux-devtools": "^3.5.0",
+    "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-bundle-tracker": "0.3.0",
@@ -21,11 +23,14 @@
   },
   "dependencies": {
     "antd": "^3.16.2",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
+    "babel-preset-es2016": "^6.24.1",
+    "classnames": "^2.2.6",
     "es6-promise": "^4.2.6",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
+    "mini-css-extract-plugin": "^0.7.0",
     "npm-check-updates": "^3.1.4",
     "radium": "^0.25.1",
     "react-cookie": "^3.1.2",
