--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "redux-devtools": "^3.5.0",
     "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^0.23.1",
+    "url-loader": "^2.2.0",
     "webpack": "^4.29.6",
-    "webpack-bundle-tracker": "0.3.0",
+    "webpack-bundle-tracker": "^0.4.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
@@ -29,12 +30,14 @@
     "es6-promise": "^4.2.6",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.11",
+    "katex": "^0.11.1",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.7.0",
-    "npm-check-updates": "^3.1.4",
+    "npm-check-updates": "^3.1.24",
     "radium": "^0.25.1",
     "react-cookie": "^3.1.2",
     "react-dom": "^16.8.6",
+    "react-katex": "^2.0.2",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
