--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "antd": "^3.16.2",
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.33",
     "axios": "^0.19.0",
     "babel-preset-es2016": "^6.24.1",
     "classnames": "^2.2.6",
