--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   }
