--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.0",
     "babel-preset-es2016": "^6.24.1",
     "classnames": "^2.2.6",
+    "d3": "^5.14.2",
     "es6-promise": "^4.2.6",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
@@ -39,7 +40,10 @@
     "radium": "^0.25.1",
     "react-cookie": "^3.1.2",
     "react-dom": "^16.8.6",
+    "react-highlight": "^0.12.0",
+    "react-highlight.js": "^1.0.7",
     "react-katex": "^2.0.2",
+    "react-markdown": "^4.2.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
