--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.7.0",
     "npm-check-updates": "^3.1.24",
+    "prismjs": "^1.17.1",
     "radium": "^0.25.1",
     "react-cookie": "^3.1.2",
     "react-dom": "^16.8.6",
-    "react-highlight": "^0.12.0",
     "react-highlight.js": "^1.0.7",
     "react-katex": "^2.0.2",
     "react-markdown": "^4.2.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
+    "react-simple-code-editor": "^0.10.0",
     "react-spring": "^8.0.27",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
